--- a/themes/raiser/sass/_init.scss
+++ b/themes/raiser/sass/_init.scss
@@ -97,14 +97,15 @@ $font-monospace:   $courier;
 // Colors, etc.
 //
 // RAISER COLORS
-$primary:    #5e9733;
-$lt-primary: #E3EDDA;
-$action:     #f8971c;
-$black:      #000000;
-$white:      #ffffff;
-$gray:       #989898;
-$lt-gray:    #f1f1f1;
-$page-bg:    #e5e5e5;
+$primary:        #5e9733;
+$primary-widget: #CDD6C5;
+$lt-primary:     #E3EDDA;
+$action:         #f8971c;
+$black:          #000000;
+$white:          #ffffff;
+$gray:           #989898;
+$lt-gray:        #f1f1f1;
+$page-bg:        #e5e5e5;
 
 // The amount lists, blockquotes and comments are indented.
 $indent-amount: 30px;
