--- a/themes/raiser/sass/components/_progress-bar.scss
+++ b/themes/raiser/sass/components/_progress-bar.scss
@@ -1,6 +1,6 @@
 .redhen-campaign-thermo-percent-bar-wrapper {
-  background: $page-bg;
-  margin-top: 1em; 
+  background: $primary-widget + 20;
+  margin-top: 0.5em; 
   border: 3px solid $white;
   border-radius: 5px;
   @include box-shadow(0 2px 3px #999); 
