--- a/themes/raiser/sass/components/_campaign_banner.scss
+++ b/themes/raiser/sass/components/_campaign_banner.scss
@@ -10,7 +10,6 @@
     }
   }
 
-
   h2 {
     left: 0.5em;
     position: absolute; 
@@ -33,5 +32,14 @@
     .field-item {
       margin-top: 3em; 
     }
+  }
+
+  .field-type-redhen-donation {
+    position: absolute; 
+    bottom: 2em;
+    right: 1em;
+    z-index: 2;
+
+    a { @include cta-btn; }
   }
 }
